--- a/src/style.css
+++ b/src/style.css
@@ -1,79 +1,26 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /** Our fonts and colors */
+  --font-family: dmsans, sans-serif;
+  --theme-color: #5BBB7B;
+  --second-color: #1F4B3F;
+  --text-color: #6B7177;
+  --dashboard-bg-color: #F0EFEC;
+  --link-color: #222222;
+  --link_hover_color: #5BBB7B;
+  --heading-color: #222222;
+  --theme-hover-color: #43a062;
+  --second-hover-color: #222222;
+  --main-font: 'DM Sans';
+  --main-font-size: 15px;
+  --main-font-weight: 400;
+  --heading-font: 'DM Sans';
+  --heading-font-weight: 700;
+  --theme-color-005: rgba(91, 187, 123, 0.05);
+  --theme-color-007: rgba(91, 187, 123, 0.07);
+  --theme-color-010: rgba(91, 187, 123, 0.1);
+  --theme-color-015: rgba(91, 187, 123, 0.15);
+  --theme-color-020: rgba(91, 187, 123, 0.2);
+  --second-color-050: rgba(31, 75, 63, 0.5);
+  /** Our fonts and colors */
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
