adding home page

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   --link-color: #222222;
   --link_hover_color: #5BBB7B;
   --heading-color: #222222;
+  --talent-section:#FFEDE8;
   --theme-hover-color: #43a062;
   --second-hover-color: #222222;
   --main-font: 'DM Sans';
